fix edition and minor css errors
git-svn-id: file:///srv/svn/publican/trunk@434 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-fedora/en-US/css/overrides.css
+++ b/publican-fedora/en-US/css/overrides.css
@@ -28,10 +28,6 @@ h2,h3,h4,h5,h6 {
 	color:#3c6eb4;
 }
 
-.example {
-	background-color:#dddddd;
-}
-
 table {
 	border:1px solid #3c6eb4;
 }
@@ -52,3 +48,8 @@ table tr.even td {
 .revhistory table th {
 	color:#3c6eb4;
 }
+
+.edition {
+	color: #3c6eb4;
+}
+
