--- a/publican-jboss/en-US/css/overrides.css
+++ b/publican-jboss/en-US/css/overrides.css
@@ -23,10 +23,6 @@ h2,h3,h4,h5,h6 {
 	color:#a70000;
 }
 
-.example {
-	background-color:#c8c5ac;
-}
-
 table {
 	border:1px solid #aaa;
 }
@@ -50,3 +46,8 @@ table tr.even td {
 .revhistory table th {
 	color:#a70000;
 }
+
+.edition {
+	color: #a70000;
+}
+
