--- a/publican-ovirt/en-US/css/overrides.css
+++ b/publican-ovirt/en-US/css/overrides.css
@@ -32,10 +32,6 @@ h2,h3,h4,h5,h6 {
 	height:105px;
 }
 
-.example {
-	background-color:#c8c5ac;
-}
-
 table {
 	border:1px solid #aaa;
 }
@@ -55,3 +51,8 @@ table tr.even td {
 .revhistory table th {
 	color:#5f8c00;
 }
+
+.edition {
+	color: #5f8c00;
+}
+
