remove corp author from templates fix BZs
git-svn-id: file:///srv/svn/publican/trunk@462 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/content/common/en-US/css/common.css
+++ b/publican/content/common/en-US/css/common.css
@@ -55,6 +55,11 @@ body.desktop .book > .toc {
 	margin-top:1em;
 }
 
+.toc .part {
+	margin-top:1em;
+	display:block;
+}
+
 div {
 	padding-top:0px;
 }
@@ -114,6 +119,10 @@ h1 {
 	text-align:center;
 }
 
+.article > .titlepage h1.title {
+	text-align:center;
+}
+
 .producttitle {
 	margin-top: 0em;
 	margin-bottom: 0em;
@@ -143,7 +152,7 @@ h2 {
 }
 
 
-h2.subtitle {
+h2.subtitle, h3.subtitle {
 	margin-top: 1em;
 	margin-bottom: 1em;
 	font-size: 1.4em;
@@ -154,6 +163,13 @@ h2.subtitle {
 	margin-top: 1em;
 	font-size: 2.0em;
 }
+
+.appendix h2 {
+	margin-top: 1em;
+	font-size: 2.0em;
+}
+
+
 
 h3 {
 	font-size:1.3em;
