Fix Numeration settings for HTML ordered lists. BZ #462601
git-svn-id: file:///srv/svn/publican/trunk@497 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/content/common/en-US/css/common.css
+++ b/publican/content/common/en-US/css/common.css
@@ -526,6 +526,22 @@ ol {
 	list-style-type: decimal;
 }
 
+ol.loweralpha {
+	list-style-type: lower-alpha;
+}
+
+ol.lowerroman {
+	list-style-type: lower-roman;
+}
+
+ol.upperalpha {
+	list-style-type: upper-alpha;
+}
+
+ol.upperroman {
+	list-style-type: upper-roman;
+}
+
 dt {
 	font-weight:bold;
 	margin-bottom:0em;
