--- a/publican/content/common/en-US/css/common.css
+++ b/publican/content/common/en-US/css/common.css
@@ -1163,77 +1163,52 @@ ul.docnav {
 	margin-bottom: 1em;
 }
 /* Reports */
-.reports ul.locale {
-	list-style:none;
-}
-
 .reports ul {
-	padding:0em;
-	margin:0em;
-}
-
-.reports ul.locale li {
-	color:#000;
-	display:block;
-	border:1px solid #eee;
-	float:left;
-	padding-right:2em;
-	margin-right:1em;
-	margin-bottom:1em;
-}
-
-.reports ul.locale li a {
-	display:block;
-	padding-top:.1em;
-	padding-bottom:.5em;
-}
-
-.reports ul.locale strong {
-	display:block;
+	list-style:none;
 	margin:0em;
 	padding:0em;
-	margin-bottom:-2.2em;
 }
 
-.reports ul.locale span.value {
-	display:block;
-	position:relative;
-	text-align:right;
-	margin-right:-1.5em;
-	color:#444;
+.reports li, .reports div{
+	border-bottom: 1px dotted;
 }
 
-.reports ul.locale li {
-	width:12em;
-	display:block;
-	float:left;
+.reports dl {
+	display:inline;
 	margin:0em;
-	clear:none;
+	padding:0em;
+	float:right;
+	margin-right: 17em;
+	margin-top:-1.3em;
 }
 
-.reports ul.locale li div.progress {
-	width:13.2em;
-	position:relative;
-	left: 0em;
-	top:0em;
-	margin-bottom:0em;
-}
-
-.reports h2 {
+.reports dt {
+	display:inline;
 	margin:0em;
+	padding:0em;
 }
 
-.reports li {
+.reports dd {
+	display:inline;
+	margin:0em;
+	padding:0em;
+	padding-right:.5em;
 }
 
-.reports li:hover {
-	background-color:#666;
-	border-color:#444;
-	color:white;
+.reports h2, .reports h3{
+	display:inline;
+	padding-right:.5em;
 }
 
-.reports li:hover strong, .reports li:hover h2, .reports li:hover a, .reports li:hover span.value {
-	color:white;
+.reports div.progress {
+	display:inline;
+	float:right;
+	width:16em;
+	background:#c00 url(../images/shine.png) top left repeat-x;
+	margin:0em;
+	margin-top:-1.3em;
+	padding:0em;
+	border:none;
 }
 
 /*uniform*/
@@ -1266,141 +1241,52 @@ div.progress span.fuzzy {
 
 
 /*Results*/
-
-.results ul.locale {
+.results ul {
 	list-style:none;
-	padding:0em;
 	margin:0em;
-}
-
-.results .pofile {
-	padding:0em;
-	margin:0em;
-}
-
-.results ul.locale li {
-	border-top:1px solid #eee;
-	padding:0em;
-	margin:0em;
-	padding-left:32px;
-}
-
-.results ul.locale .pofile {
-	display:block;
-	width:100%;
-	color:#444;
-	padding:0em;
-	margin:0em;
-}
-
-.results span.value {
-	color:#888;
-}
-
-.results strong {
-	font-weight: normal;
-}
-
-.results .home a {
-	display:block;
-	margin:0 auto;
-	width:5em;
-	background: url(../images/stock-home.png) top left no-repeat;
-	padding:5px;
-	padding-left:28px;
-}
-
-.results ul.locale li:hover, .results ul.locale li:hover span.pofile , .results ul.locale li:hover strong, .results ul.locale li:hover span.value {
-	background-color:#666;
-	color:white;
-}
-
-ul.locale {
-	list-style:none;
-}
-
-ul.locale li.total {
-	color:#777;
-	width:31em;
-	display:block;
-	float:left;
-	margin-right:2em;
-	clear:none;
-}
-
-ul.locale li {
-	clear:both;
-	color:#777;
-	display:block;
-}
-
-ul.locale strong, span.value {
-	font-weight:normal;
-	color:#888;
-}
-
-ul.locale li a {
-	display:block;
-	padding-top:.2em;
-}
-
-ul.locale li.total div.progress {
-	position:relative;
-	left:0em;
-	top:0em;
-	margin-bottom:0em;
-}
-
-ul.locale li {
-	width:100%;
-}
-
-ul.locale li div.progress {
-	float:left;
-	position:relative;
-	left:30.5em;
-	top:-2em;
-	margin:0em;
-	margin-bottom:-3em;
-}
-
-li.total {
 	padding:0em;
 }
 
-li.total {
+.results li, .results div{
+	border-bottom: 1px dotted;
+}
+
+.results dl {
+	display:inline;
+	margin:0em;
+	padding:0em;
 	float:right;
-	max-width:16em;
-	padding:.5em;
-	margin:0 auto;
-	padding-top: .5em;
-	background-color:#f7f2d0;
-	font-size: 1.3em;
-	color:#ccc;
-	margin-bottom:1em;
-	min-height:9.5em;
+	margin-right: 17em;
+	margin-top:-1.3em;
 }
 
-li.total .value {
-	color:#444;
+.results dt {
+	display:inline;
+	margin:0em;
+	padding:0em;
 }
 
-li.total strong {
-	display:block;
-	color:black;
-	font-weight:bold;
+.results dd {
+	display:inline;
+	margin:0em;
+	padding:0em;
+	padding-right:.5em;
 }
 
-li.total span.value {
-	position:relative;
-	display:block;
-	top:-1.25em;
-	text-align:right;
+.results h2, .results h3{
+	display:inline;
+	padding-right:.5em;
 }
 
-
-.pofile {
-	position:relative;
+.results div.progress {
+	display:inline;
+	float:right;
+	width:16em;
+	background:#c00 url(../images/shine.png) top left repeat-x;
+	margin:0em;
+	margin-top:-1.3em;
+	padding:0em;
+	border:none;
 }
 
 
