--- a/publican/templates/language.tmpl
+++ b/publican/templates/language.tmpl
@@ -1,13 +1,14 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-  <head>
-    <title><TMPL_VAR name="title"></title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <link rel="stylesheet" type="text/css" href="Common_Content/css/default.css" />
-  </head>
-  <body class="results">
+<head>
+	<title><TMPL_VAR name="title"></title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta name="generator" content="publican"/>
+	<link rel="stylesheet" type="text/css" href="Common_Content/css/default.css" />
+</head>
+<body class="results">
 	<h1><TMPL_VAR name="title"></h1>
-	<p id="powered"><strong>Powered by Red Hat</strong></p>
+	<p id="powered"><strong>Publican Translation Report</strong></p>
 	<p class="home"><a class="home-link" href="index.html">Overview</a></p>
 	<div id="words">
 		<h2 class="words">Words</h2>
@@ -18,7 +19,7 @@
 		<dl>
 			<dt class="fuzzy">Fuzzy:</dt> <dd  class="fuzzy"><TMPL_VAR name="words_fuzzy"></dd>
 			<dt class="translated">Translated:</dt> <dd class="translated"><TMPL_VAR name="words_translated"></dd>
-			<dt class="total">Total:</st> <dd class="total"><TMPL_VAR name="words_total"></dd>
+			<dt class="total">Total:</dt> <dd class="total"><TMPL_VAR name="words_total"></dd>
 		</dl>
 	</div>
 	<div id="hours">
@@ -30,7 +31,7 @@
 		<dl>
 			<dt class="fuzzy">Fuzzy:</dt> <dd class="fuzzy"><TMPL_VAR name="hours_fuzzy"></dd>
 			<dt class="untranslated">Untranslated:</dt> <dd class="untranslated"><TMPL_VAR name="hours_untranslated"></dd>
-			<dt class="remaining">Remaining:</st> <dd class="remaining"><TMPL_VAR name="hours_remaining"></dd>
+			<dt class="remaining">Remaining:</dt> <dd class="remaining"><TMPL_VAR name="hours_remaining"></dd>
 		</dl>
 	</div>
 	<ul class="locale">
@@ -44,13 +45,8 @@
 			<dl>
 				<dt class="fuzzy">Fuzzy:</dt> <dd  class="fuzzy"><TMPL_VAR name="fuzzy"></dd>
 				<dt class="translated">Translated:</dt> <dd class="translated"><TMPL_VAR name="translated"></dd>
-				<dt class="total">Total:</st> <dd class="total"><TMPL_VAR name="total"></dd>
+				<dt class="total">Total:</dt> <dd class="total"><TMPL_VAR name="total"></dd>
 			</dl>
-			<form class="controls" method="post" action=cgi-bin/docbot>
-				<input class="disabled" type="submit" name="take" disabled value="Take"/>
-				<input class="disabled" type="submit" name="release" disabled value="Release"/>
-				<input class="disabled" type="submit" name="free" disabled value="Free"/>
-			</form>
 		</li>
 	</TMPL_LOOP>
 	</ul>
