pretty up reports
git-svn-id: file:///srv/svn/publican/trunk@501 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/content/common/en-US/css/common.css
+++ b/publican/content/common/en-US/css/common.css
@@ -1169,8 +1169,15 @@ ul.docnav {
 	padding:0em;
 }
 
-.reports li, .reports div{
-	border-bottom: 1px dotted;
+.reports li{
+	margin:0em;
+	padding:0em;
+}
+
+.reports li.odd {
+	background-color: #eeeeee;
+	margin:0em;
+	padding:0em;
 }
 
 .reports dl {
@@ -1198,6 +1205,8 @@ ul.docnav {
 .reports h2, .reports h3{
 	display:inline;
 	padding-right:.5em;
+	font-size:10pt;
+	font-weight:normal;
 }
 
 .reports div.progress {
@@ -1241,14 +1250,22 @@ div.progress span.fuzzy {
 
 
 /*Results*/
+
 .results ul {
 	list-style:none;
 	margin:0em;
 	padding:0em;
 }
 
-.results li, .results div{
-	border-bottom: 1px dotted;
+.results li{
+	margin:0em;
+	padding:0em;
+}
+
+.results li.odd {
+	background-color: #eeeeee;
+	margin:0em;
+	padding:0em;
 }
 
 .results dl {
@@ -1276,6 +1293,8 @@ div.progress span.fuzzy {
 .results h2, .results h3{
 	display:inline;
 	padding-right:.5em;
+	font-size:10pt;
+	font-weight:normal;
 }
 
 .results div.progress {
@@ -1288,7 +1307,6 @@ div.progress span.fuzzy {
 	padding:0em;
 	border:none;
 }
-
 
 /* Dirty EVIL Mozilla hack for round corners */
 pre {
