Fix TOC padding for appendix and glossary. BZ #462991
git-svn-id: file:///srv/svn/publican/trunk@503 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/content/common/en-US/css/common.css
+++ b/publican/content/common/en-US/css/common.css
@@ -51,13 +51,19 @@ body.desktop .book > .toc {
 	line-height:1.35em;
 }
 
-.toc .chapter {
+.toc .chapter, .toc .appendix, .toc .glossary {
 	margin-top:1em;
 }
 
 .toc .part {
 	margin-top:1em;
 	display:block;
+}
+
+
+span.appendix, span.glossary {
+	display:block;
+	margin-top:0.5em;
 }
 
 div {
