--- a/publican/content/common/en-US/css/common.css
+++ b/publican/content/common/en-US/css/common.css
@@ -1344,3 +1344,39 @@ pre {
 span.remark{
 	background-color: #ffff00;
 }
+
+.draft {
+	background-image: url(../images/watermark-draft.png);
+	background-repeat: repeat
+}
+
+.alpha1 {
+	background-image: url(../images/watermark-alpha1.png);
+	background-repeat: repeat
+}
+
+.alpha2 {
+	background-image: url(../images/watermark-alpha2.png);
+	background-repeat: repeat
+}
+
+.beta1 {
+	background-image: url(../images/watermark-beta1.png);
+	background-repeat: repeat
+}
+
+.beta2 {
+	background-image: url(../images/watermark-beta2.png);
+	background-repeat: repeat
+}
+
+.prc {
+	background-image: url(../images/watermark-pre-release-candidate.png);
+	background-repeat: repeat
+}
+
+.rc {
+	background-image: url(../images/watermark-release-candidate.png);
+	background-repeat: repeat
+}
+
