Added foreignphrase to list of validated tags. Add foreignphrase to list of tags aspell should ignore. Fixed left align of verbatim items in notes.
git-svn-id: file:///srv/svn/publican/trunk@546 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/content/common/en-US/css/common.css
+++ b/publican/content/common/en-US/css/common.css
@@ -690,8 +690,9 @@ div.note, div.important, div.warning {
 }
 
 div.note pre, div.important pre, div.warning pre {
-	background-color:#333;
-	color:white;
+	background-color: #333;
+	color: white;
+	margin-left: 4.5em;
 }
 
 
@@ -1380,3 +1381,7 @@ span.remark{
 	background-repeat: repeat
 }
 
+
+.foreignphrase{
+	font-style: inherit;
+}
