Ryan can't check in mwahahaha
git-svn-id: file:///srv/svn/publican/trunk@548 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/content/common/en-US/css/common.css
+++ b/publican/content/common/en-US/css/common.css
@@ -470,12 +470,14 @@ h3.author {
 }
 
 /* inline syntax highlighting */
+
+/* inline syntax highlighting */
 .hl-keyword {
 	color: #002F5D;
 }
 
 .hl-string {
-	color: #00774B;
+	color: #5C3566;
 }
 
 .hl-comment {
@@ -483,7 +485,8 @@ h3.author {
 }
 
 .hl-tag {
-	color: #002F5D;
+	color: #A62C2C;
+	font-weight:bold;
 }
 
 .hl-attribute {
@@ -491,11 +494,11 @@ h3.author {
 }
 
 .hl-value {
-	color: #4E376B;
+	color: #5C3566;
 }
 
 .hl-html {
-	color:#002F5D;
+	color: #002F5D;
 }
 
 .hl-xslt {
@@ -507,11 +510,13 @@ h3.author {
 }
 
 .hl-directive {
-	color: #002F5D;
+	color: #4E9A06;
+
 }
 
 .hl-doctype {
-	color: #002F5D;
+	color: #CE5C00;
+
 }
 
 
