Fixed contrib class in CSS. BZ #469595
git-svn-id: file:///srv/svn/publican/trunk@549 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/content/common/en-US/css/common.css
+++ b/publican/content/common/en-US/css/common.css
@@ -416,12 +416,14 @@ h3.author {
 	padding: 0em;
 	margin: 0em;
 	padding-top: 1em;
+	margin-top:1em;
 }
 
 .author, 
 .editor, 
 .translator, 
-.othercredit {
+.othercredit,
+.contrib {
 	display:block;
 }
 
@@ -1045,16 +1047,6 @@ div.important .keycap,
 div.warning .keycap
 {
 	color:white;
-}
-
-.authorgroup h4 {
-	padding:0em;
-	margin:0em;
-	margin-top:1em;
-}
-
-.author, .editor, .translator, .othercredit {
-	display:block;
 }
 
 ul li p:last-child {
