--- a/publican/content/common/en-US/css/common.css
+++ b/publican/content/common/en-US/css/common.css
@@ -74,7 +74,7 @@ div.section {
 	padding-top:1em;
 }
 
-p {
+p, div.para{
 	padding-top:0px;
 	margin-top:0.3em;
 	padding-bottom:0px;
@@ -232,7 +232,7 @@ ul.languages, .languages li {
 	text-decoration: none;
 }
 
-.languages li p {
+.languages li p, .languages li div.para {
 	display:inline;
 }
 
@@ -381,7 +381,7 @@ a.version:focus, a.version:hover {
 	text-align:left;
 }
 
-.revhistory tr td p {
+.revhistory tr td p, .revhistory tr td div.para {
 	text-align:left;
 	font-weight:bold;
 	display:block;
@@ -574,7 +574,7 @@ li {
 	margin-bottom:0.4em;
 }
 
-li p {
+li p, li div.para {
 	padding-top:0px;
 	margin-top:0em;
 	padding-bottom:0px;
@@ -769,7 +769,7 @@ div.note a:visited, div.important a:visited, div.warning a:visited, div.note a:l
 }
 
 /*notification icons*/
-div.note h2, div.note p, div.warning h2, div.warning p, div.important h2, .important p {
+div.note h2, div.note p, div.note div.para, div.warning h2, div.warning p, div.warning div.para, div.important h2, .important p, .important div.para {
 	padding:0em;
 	margin:0em;
 	padding-left:56px;
@@ -818,7 +818,8 @@ table tr.even td {
 	background-color:#f5f5f5;
 }
 
-table th p:first-child, table td p:first-child, table  li p:first-child {
+table th p:first-child, table td p:first-child, table  li p:first-child,
+table th div.para:first-child, table td div.para:first-child, table  li div.para:first-child {
 	margin-top:0em;
 	padding-top:0em;
 	display:inline;
@@ -1017,7 +1018,7 @@ sup {
 	text-decoration:none;
 }
 
-.footnote p {
+.footnote p,.footnote div.para {
 	padding-left:5em;
 }
 
@@ -1049,7 +1050,7 @@ div.warning .keycap
 	color:white;
 }
 
-ul li p:last-child {
+ul li p:last-child, ul li div.para:last-child {
 	margin-bottom:0em;
 	padding-bottom:0em;
 }
