Validated type, methodname, exceptionname, varname, interfacename tags. BZ #461708 Banned glosslist (untranslatable) BZ #461864 Validated uri, mousebutton, hardware tags. BZ #461870 Validated othername tag. BZ #464315
git-svn-id: file:///srv/svn/publican/trunk@562 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/content/common/en-US/css/common.css
+++ b/publican/content/common/en-US/css/common.css
@@ -60,7 +60,6 @@ body.desktop .book > .toc {
 	display:block;
 }
 
-
 span.appendix, span.glossary {
 	display:block;
 	margin-top:0.5em;
@@ -1341,44 +1340,13 @@ pre {
 }
 
 span.remark{
-	background-color: #ffff00;
+	background-color: #ff00ff;
 }
 
 .draft {
 	background-image: url(../images/watermark-draft.png);
 	background-repeat: repeat
 }
-
-.alpha1 {
-	background-image: url(../images/watermark-alpha1.png);
-	background-repeat: repeat
-}
-
-.alpha2 {
-	background-image: url(../images/watermark-alpha2.png);
-	background-repeat: repeat
-}
-
-.beta1 {
-	background-image: url(../images/watermark-beta1.png);
-	background-repeat: repeat
-}
-
-.beta2 {
-	background-image: url(../images/watermark-beta2.png);
-	background-repeat: repeat
-}
-
-.prc {
-	background-image: url(../images/watermark-pre-release-candidate.png);
-	background-repeat: repeat
-}
-
-.rc {
-	background-image: url(../images/watermark-release-candidate.png);
-	background-repeat: repeat
-}
-
 
 .foreignphrase{
 	font-style: inherit;
