fix draft image
git-svn-id: file:///srv/svn/publican/trunk@565 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/content/common/en-US/css/common.css
+++ b/publican/content/common/en-US/css/common.css
@@ -1346,7 +1346,8 @@ span.remark{
 
 .draft {
 	background-image: url(../images/watermark-draft.png);
-	background-repeat: repeat
+	background-repeat: repeat-y;
+        background-position: center;
 }
 
 .foreignphrase{
