--- a/publican/content/common/en-US/css/common.css
+++ b/publican/content/common/en-US/css/common.css
@@ -98,7 +98,7 @@ div.longdesc-link {
 	color:#999;
 }
 
-.toc a {
+.toc a, .qandaset a {
 	font-weight:normal;
 }
 
@@ -446,7 +446,7 @@ h3.author {
 
 /* qanda sets */
 .answer {
-	padding-bottom:1em;
+	margin-bottom:1em;
 	border-bottom:1px dotted #ccc;
 }
 
@@ -565,6 +565,7 @@ dd {
 	margin:0em;
 	margin-left:2em;
 	padding-top:0em;
+	padding-bottom: 1em;
 }
 
 li {
