Fix dot on docnav css. BZ #472627
git-svn-id: file:///srv/svn/publican/trunk@578 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/content/common/en-US/css/common.css
+++ b/publican/content/common/en-US/css/common.css
@@ -1110,7 +1110,6 @@ ul li p:last-child, ul li div.para:last-child {
 }
 
 .docnav li.previous strong, .docnav li.next strong {
-	display:block;
 	height:22px;
 }
 
@@ -1122,6 +1121,7 @@ ul li p:last-child, ul li div.para:last-child {
 .docnav li.next a strong {
 	background:  url(../images/stock-go-forward.png) top right no-repeat;
 	padding-top:3px;
+	padding-bottom:4px;
 	padding-right:28px;
 	font-size:1.2em;
 }
@@ -1129,7 +1129,9 @@ ul li p:last-child, ul li div.para:last-child {
 .docnav li.previous a strong {
 	background: url(../images/stock-go-back.png) top left no-repeat;
 	padding-top:3px;
+	padding-bottom:4px;
 	padding-left:28px;
+	padding-right:0.5em;
 	font-size:1.2em;
 }
 
