--- a/publican/content/common/en-US/css/common.css
+++ b/publican/content/common/en-US/css/common.css
@@ -1347,7 +1347,7 @@ pre {
 	text-align: center;
 }
 
-span.remark{
+span.remark {
 	background-color: #ff00ff;
 }
 
@@ -1357,6 +1357,27 @@ span.remark{
         background-position: center;
 }
 
-.foreignphrase{
+.foreignphrase {
 	font-style: inherit;
 }
+
+dt {
+	clear:both;
+}
+
+dt img {
+	border-style:none;
+	width: 112px;
+}
+
+dt object {
+	width: 112px;
+}
+
+dt .inlinemediaobject, dt object {
+	display:inline;
+	float:left;
+	margin-bottom:1em;
+	padding-right:1em;
+}
+
