--- a/publican/content/common/en-US/css/common.css
+++ b/publican/content/common/en-US/css/common.css
@@ -73,7 +73,7 @@ div.section {
 	padding-top:1em;
 }
 
-p, div.para{
+p, div.para, div.formalpara {
 	padding-top:0px;
 	margin-top:0.3em;
 	padding-bottom:0px;
@@ -253,7 +253,6 @@ ul.languages {
 
 /*unique to the webpage only*/
 .article ul {
-	margin:0em;
 	padding-left:2em;
 	list-style: disc;
 }
@@ -781,24 +780,34 @@ div.note h2, div.note p, div.note div.para, div.warning h2, div.warning p, div.w
 }
 
 /*Page Title*/
-#title strong {
-	display:none;
-}
-
-#title a {
-	border:none;
+#title  {
 	display:block;
 	height:45px;
-	width:110px;
-	padding-left:200px;
-	background:transparent url(../images/image_left.png) top left no-repeat;
-}
-
-#title {
-	display:block;
-	height:45px;
-	background:transparent url(../images/image_right.png) top right no-repeat;
 	padding-bottom:1em;
+	margin:0em;
+}
+
+#title a.left{
+	display:inline;
+	border:none;
+	padding-left:200px;
+}
+
+#title a.left img{
+	border:none;
+	float:left;
+	margin:0em;
+	margin-top:.7em;
+}
+
+#title a.right {
+	padding-bottom:1em;
+}
+
+#title a.right img {
+	border:none;
+	float:right;
+	margin:0em;
 }
 
 /*Table*/
@@ -1111,6 +1120,7 @@ ul li p:last-child, ul li div.para:last-child {
 
 .docnav li.previous strong, .docnav li.next strong {
 	height:22px;
+	display:block;
 }
 
 .docnav {
