Fix missing syntax highlighting templates. BZ #474077
git-svn-id: file:///srv/svn/publican/trunk@603 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/content/common/en-US/css/common.css
+++ b/publican/content/common/en-US/css/common.css
@@ -525,6 +525,16 @@ h3.author {
 
 }
 
+.hl-number {
+	color: #CE5C00;
+
+}
+
+.hl-doccomment {
+	color: #CE5C00;
+
+}
+
 /*Lists*/
 ul {
 	padding-left:1.6em;
