Fix multiple authors in revhistory. Patch by: Paul W. Frields. BZ #478552
git-svn-id: file:///srv/svn/publican/trunk@607 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/content/common/en-US/css/common.css
+++ b/publican/content/common/en-US/css/common.css
@@ -414,7 +414,7 @@ h3.author {
 	padding: 0em;
 	margin: 0em;
 	padding-top: 1em;
-	margin-top:1em;
+	margin-top: 1em;
 }
 
 .author, 
@@ -422,11 +422,15 @@ h3.author {
 .translator, 
 .othercredit,
 .contrib {
-	display:block;
+	display: block;
+}
+
+.revhistory .author {
+	display: inline;
 }
 
 .othercredit h3 {
-	padding-top:1em;
+	padding-top: 1em;
 }
 
 
