fix minimum font size breaking desktop toc
git-svn-id: file:///srv/svn/publican/trunk@612 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/content/common/en-US/css/common.css
+++ b/publican/content/common/en-US/css/common.css
@@ -44,7 +44,6 @@ body.desktop .book > .toc {
 	left:0px;
 	padding-left:1em;
 	background-color:#EEEEEE;
-	font-size: 0.8em;
 }
 
 .toc {
@@ -1415,6 +1414,8 @@ dl:after {
 .toc dd {
 	padding-bottom: 0em;
 	margin-bottom: 1em;
+	padding-left: 1.3em;
+	margin-left: 0em;
 }
 
 div.toc > dl > dt {
