Complete Arabic translation of Conventions by Muayyad Alsadi; make legal notice paras ltr since these are not to be translated
git-svn-id: file:///srv/svn/publican/trunk@735 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/content/common/ar-AR/css/lang.css
+++ b/publican/content/common/ar-AR/css/lang.css
@@ -1,5 +1,5 @@
 /* RTL problems fixed by <alsadi@ojuba.org> report RTL bugs to core@ojuba.org */
-pre, tt, code {
+pre, tt, code, div.legalnotice .para {
 	direction: ltr;
 }
 
