--- a/publican/content/common/fa-IR/css/lang.css
+++ b/publican/content/common/fa-IR/css/lang.css
@@ -1,5 +1,5 @@
 /* RTL problems fixed by <alsadi@ojuba.org> report RTL bugs to core@ojuba.org */
-pre, tt, code {
+pre, tt, code, div.legalnotice .para {
 	direction: ltr;
 }
 
