fix rounded corners in CSS3 and webkit
git-svn-id: file:///srv/svn/publican/trunk@779 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/datadir/Common_Content/common/en-US/css/common.css
+++ b/publican/datadir/Common_Content/common/en-US/css/common.css
@@ -1347,10 +1347,14 @@ div.progress span.fuzzy {
 /* Dirty EVIL Mozilla hack for round corners */
 pre {
 	-moz-border-radius:11px;
+	-webkit-border-radius:11px;
+	border-radius: 11px;
 }
 
 .example {
 	-moz-border-radius:15px;
+	-webkit-border-radius:15px;
+	border-radius: 15px;
 }
 
 .term{
