Remove border from HTML table for simplelist. BZ #502126
git-svn-id: file:///srv/svn/publican/trunk@795 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/datadir/Common_Content/common/en-US/css/common.css
+++ b/publican/datadir/Common_Content/common/en-US/css/common.css
@@ -856,6 +856,10 @@ table {
 	border-collapse:collapse;
 }
 
+table.simplelist {
+	border-style: none;
+}
+
 table th {
 	text-align:left;
 	background-color:#6699cc;
