changed the common brand css to view properly when a large productname is used.
git-svn-id: file:///srv/svn/publican/trunk@802 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/datadir/Common_Content/common/en-US/css/common.css
+++ b/publican/datadir/Common_Content/common/en-US/css/common.css
@@ -132,7 +132,7 @@ h1 {
 	margin-bottom: 0em;
 	font-size: 3.0em;
 	font-weight: bold;
-	background: #336699 url(../images/h1-bg.png) top left repeat;
+	background: #003d6e url(../images/h1-bg.png) top left repeat-x;
 	color: white;
 	text-align: center;
 	padding: 0.7em;
