fix bug in meta tag, fix display bug in set
git-svn-id: file:///srv/svn/publican/trunk@811 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/datadir/Common_Content/common/en-US/css/common.css
+++ b/publican/datadir/Common_Content/common/en-US/css/common.css
@@ -127,6 +127,10 @@ h1 {
 	text-align:center;
 }
 
+.set .titlepage > div > div > h1.title {
+	text-align:center;
+}
+
 .producttitle {
 	margin-top: 0em;
 	margin-bottom: 0em;
