not strict is no longer enforced in docs
git-svn-id: file:///srv/svn/publican/trunk@835 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/datadir/Common_Content/common/en-US/css/common.css
+++ b/publican/datadir/Common_Content/common/en-US/css/common.css
@@ -1437,3 +1437,13 @@ div.toc > dl > dt {
 	margin-bottom: 0em;
 	margin-top: 1em;
 }
+
+
+.strikethrough {
+	text-decoration: line-through;
+}
+
+.underline {
+	text-decoration: underline;
+}
+
