--- a/publican/datadir/Common_Content/common/en-US/css/common.css
+++ b/publican/datadir/Common_Content/common/en-US/css/common.css
@@ -585,6 +585,14 @@ ol {
 	list-style-type: decimal;
 }
 
+ol ol {
+	list-style-type: lower-alpha;
+}
+
+ol.arabic {
+	list-style-type: decimal;
+}
+
 ol.loweralpha {
 	list-style-type: lower-alpha;
 }
