Fixed callout rendering. BZ #531686
git-svn-id: file:///srv/svn/publican/trunk@884 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/datadir/Common_Content/common/en-US/css/common.css
+++ b/publican/datadir/Common_Content/common/en-US/css/common.css
@@ -869,7 +869,7 @@ table {
 	border-collapse:collapse;
 }
 
-table.simplelist {
+table.simplelist, .calloutlist table {
 	border-style: none;
 }
 
@@ -1455,9 +1455,10 @@ div.toc > dl > dt {
 	text-decoration: underline;
 }
 
-.calloutlist img {
+.calloutlist img, .callout {
 	padding: 0em;
 	margin: 0em;
-	width: 24px;
+	width: 12pt;
+	display: inline;
 }
 
