Fixes for brand from James Cobb <jcobb@redhat.com>
git-svn-id: file:///srv/svn/publican/trunk@960 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-jboss-community/en-US/css/overrides.css
+++ b/publican-jboss-community/en-US/css/overrides.css
@@ -33,7 +33,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-	border-top:1px dotted #CCCCCC;
 	line-height:1.2em;
 	padding:1.5em;
 }
@@ -42,6 +41,9 @@ h1 {
 	background: #4a5d75 url(../images/h1-bg.png) top left no-repeat;
 	color:#182737;
 	font-size:2em;
+	border-top:1px dotted #CCCCCC;
+	padding: 1.45em;
+	clear: both;
 }
 
 .section h1.title {
@@ -79,7 +81,7 @@ h5.formalpara {
 }
 
 .docnav{
-margin-top:31px;
+clear: both;
 padding-bottom:3em;
 }
 
@@ -158,8 +160,8 @@ pre, code, .guibutton, .keycap, .guilabel {
 .keycap {padding:.1em.4em;}
 
 .example {
-    background-color:#c8c5ac;
-    padding:5px;
+    background-color:#dad6b9;
+    padding:15px;
     margin-bottom:10px;
 }
 
@@ -509,7 +511,7 @@ pre .replaceable, pre .keycap {color:white;}
 
 pre {
   font-family:verdana,helvetica,sans-serif;
-  background-color:#F5F5F5;
+  background-color:#fffee7;
   border:1px solid #CCCCCC;
   padding:5px 15px 5px 25px;
 }
