switch Japanese font, fix broken docs
git-svn-id: file:///srv/svn/publican/trunk@992 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/datadir/Common_Content/common/en-US/css/common.css
+++ b/publican/datadir/Common_Content/common/en-US/css/common.css
@@ -711,6 +711,11 @@ img {
 	font-weight:bold;
 }
 
+/* no bold in toc */
+.toc * {
+	font-weight: inherit;
+}
+
 pre {
 	font-family:"liberation mono", "bitstream vera mono", "dejavu mono", monospace;
 	display:block;
