Fix gradient in draft docs
git-svn-id: file:///srv/svn/publican/trunk@1008 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-jboss-community/en-US/css/overrides.css
+++ b/publican-jboss-community/en-US/css/overrides.css
@@ -1,6 +1,10 @@
+html {    
+	background-image:url(../images/bkg_gradient.png);
+	background-repeat:repeat-x;
+}
+
 body {
-    background-image:url(../images/bkg_gradient.png);
-    background-repeat:repeat-x;
+    background-color: transparent;
     margin:0 auto;
     font-family:'Lucida Grande', Geneva, Verdana, Arial, sans-serif;
     font-size:12px;
@@ -552,3 +556,7 @@ pre {-moz-border-radius:11px;}
 
 div.note, div.tip, div.important, div.caution, div.warning {-moz-border-radius:11px;}
 
+.draft {
+background-image: url(../images/watermark-draft.png);
+background-position: center top;
+}
