--- a/publican-jboss-community/en-US/css/overrides.css
+++ b/publican-jboss-community/en-US/css/overrides.css
@@ -53,7 +53,12 @@ h1 {
 	color:#4a5d75;
 }
 
+
 h2 {font-size:1.6em;}
+
+.preface h1.title {
+    
+}
 
 h3 {
     font-size:1.3em;
@@ -170,19 +175,26 @@ pre, code, .guibutton, .keycap, .guilabel {
 
 /* Terminal/Console text */
 
-.command, .computeroutput, .filename, .citetitle, .replaceable, .option {font-weight:bold;}
+.command, .computeroutput, .filename, .citetitle, .replaceable, .option {
+    font-family:"consolas", "menlo", "monaco", "dejavu sans mono", "courier new", monospace;
+    font-weight:bold;
+}
 
 .command .replaceable {color:#555;}
 
 pre {
     display:block;
     background-color:#f9f3b0;
+    font-family:"consolas", "menlo", "monaco", "dejavu sans mono", "courier new", monospace;
     color:#333;
     overflow:auto;
     padding:10px 20px;
 }
 
-code {white-space:nowrap;}
+code {
+    white-space:nowrap;
+    font-family:"consolas", "menlo", "monaco", "dejavu sans mono", "courier new", monospace;
+}
 
 
 
@@ -522,8 +534,6 @@ pre {
 div.note .replaceable, div.tip .replaceable, div.important .replaceable, div.caution .replaceable, div.warning .replaceable,
 div.note .keycap, div.tip .keycap, div.important .keycap, div.caution .keycap, div.warning .keycap {color:white;}
 
-div.abstract {font-size:larger;}
-
 .authorgroup {}
 
 .authorgroup h4 {
@@ -558,4 +568,24 @@ div.note, div.tip, div.important, div.caution, div.warning {-moz-border-radius:1
 .draft {
 background-image: url(../images/watermark-draft.png);
 background-position: center top;
+}
+
+/* tweak some headings to match JDocBook styles that use H2 in places where Publican uses H1 */
+.preface h1.title, .appendix h1.title, .legalnotice h1 {
+    font-size:1.6em;
+    padding:0;
+}
+
+.abstract h6 {
+	margin-top:1em;
+	margin-bottom:.5em;
+	font-size:1.6em;
+}
+
+.revhistory table th {
+	background-color:transparent;
+	color:#336699;
+	font-size:12px;
+	padding: 1em 0em;
+	border-bottom:1px solid #eee;
 }
