More monospace fixes
git-svn-id: file:///srv/svn/publican/trunk@1027 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-jboss-community-hibernate/en-US/css/overrides.css
+++ b/publican-jboss-community-hibernate/en-US/css/overrides.css
@@ -147,7 +147,7 @@ dt a {font-weight:normal;}
 
 pre, code, .guibutton, .keycap, .guilabel {
     font-size:0.9em;
-    font-family:verdana, helvetica, sans-serif;
+    font-family:"consolas", "menlo", "monaco", "dejavu sans mono", "courier new", monospace;
 }
 
 .guibutton, .keycap, .guilabel {
@@ -519,7 +519,7 @@ div.chapter, div.section {padding-top:2em;}
 pre .replaceable, pre .keycap {color:white;}
 
 pre {
-  font-family:verdana,helvetica,sans-serif;
+  font-family:"consolas", "menlo", "monaco", "dejavu sans mono", "courier new", monospace;
   background-color:#F5F5F5;
   border:1px solid #CCCCCC;
   padding:5px 15px 5px 25px;
