--- a/publican-jboss-community/en-US/css/overrides.css
+++ b/publican-jboss-community/en-US/css/overrides.css
@@ -153,7 +153,7 @@ dt a {font-weight:normal;}
 
 pre, code, .guibutton, .keycap, .guilabel {
     font-size:0.9em;
-    font-family:verdana, helvetica, sans-serif;
+    font-family:"consolas", "menlo", "monaco", "dejavu sans mono", "courier new", monospace;
 }
 
 .guibutton, .keycap, .guilabel {
@@ -525,7 +525,7 @@ div.chapter, div.section {padding-top:2em;}
 pre .replaceable, pre .keycap {color:white;}
 
 pre {
-  font-family:verdana,helvetica,sans-serif;
+  font-family:"consolas", "menlo", "monaco", "dejavu sans mono", "courier new", monospace;
   background-color:#fffee7;
   border:1px solid #CCCCCC;
   padding:5px 15px 5px 25px;
