Fix nested tag with similar name breaking translation. BZ #568201
git-svn-id: file:///srv/svn/publican/trunk@1041 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/datadir/Common_Content/common/en-US/css/common.css
+++ b/publican/datadir/Common_Content/common/en-US/css/common.css
@@ -741,6 +741,15 @@ code {
 	font-weight:bold;
 }
 
+.parameter code {
+	display: inline;
+	white-space: pre-wrap; /* css-3 */
+	white-space: -moz-pre-wrap !important; /* Mozilla, since 1999 */
+	white-space: -pre-wrap; /* Opera 4-6 */
+	white-space: -o-pre-wrap; /* Opera 7 */
+	word-wrap: break-word; /* Internet Explorer 5.5+ */
+}
+
 /*Notifications*/
 div.note, div.important, div.warning {
 	padding:1em;
