Switch from object to iframe BZ #542524
git-svn-id: file:///srv/svn/publican/trunk@1048 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/datadir/Common_Content/common/en-US/css/common.css
+++ b/publican/datadir/Common_Content/common/en-US/css/common.css
@@ -16,7 +16,7 @@ body.toc_embeded {
 	margin-left: 300px;
 }
 
-object.toc {
+object.toc, iframe.toc {
 	/*for web hosting system only*/
 	border-style:none;
 	position:fixed;
