--- a/publican/templates/toc.tmpl
+++ b/publican/templates/toc.tmpl
@@ -3,64 +3,57 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<link rel="stylesheet" href="./Common_Content/css/default.css" type="text/css" />
 	<link rel="stylesheet" href="../interactive.css" type="text/css" />
 	<script type="text/javascript" src="../toc.js"></script>
-	<title>toc nav</title>
+	<title>[% toc_nav %]</title>
 </head>
 <body class="tocnav" onload="hideNoJS();getCookie();checkCookie();">
 <h1>
-	<a style="background-image:url(images/web_logo.png)" href="index.html" onclick="window.top.location='index.html'" ><span>Welcome</span></a>
+	<a style="background-image:url(images/web_logo.png)" href="index.html" onclick="window.top.location='index.html'" ><span>[% Welcome %]</span></a>
 </h1>
 <div class="tocnavwrap">
-	<TMPL_VAR name='search'> 
+	[% search %] 
 	<div class="lang">
 		<div class="reset">
-			<a href="#" title="collapse document navigation" onclick="clearCookie();">collapse all</a>
+			<a href="#" title="collapse document navigation" onclick="clearCookie();">[% collapse_all %]</a>
 		</div>
 		<select id="langselect" class="langselect"  onchange="loadToc();">
-			<option disabled="disabled" value="">Language</option>
-        	<TMPL_LOOP NAME="langs">
-			<option <TMPL_VAR name='selected'> value="<TMPL_VAR name='lang'>"><TMPL_VAR name="lang_name"></option>
-	        </TMPL_LOOP>
+			<option disabled="disabled" value="">[% Language %]</option>
+        	[% FOREACH langs %]
+			<option [% selected %] value="[% lang %]">[% lang_name %]</option>
+	        [% END %]
 		</select>
 	</div>
-	<div class="hidden" id="nocookie">
-		The Navigation Menu below will automatically collapse when pages are loaded. Enable cookies to fix the Navigation Menu functionality.
-	</div>
-	<TMPL_LOOP NAME="products">
-	<div class="product collapsed" onclick="toggle(event, '<TMPL_VAR name="product">');work=1;">
-		<span class="product"><TMPL_VAR name="product_clean"></span>
-		<div id='<TMPL_VAR name="product">' class="versions hidden">
-		<TMPL_LOOP NAME="versions">
-			<div id='<TMPL_VAR name="product">.<TMPL_VAR name="version">' class="version collapsed" onclick="toggle(event, '<TMPL_VAR name="product">.<TMPL_VAR name="version">.books');">
-				<span class="version"><TMPL_VAR name="version"></span>
-				<div id='<TMPL_VAR name="product">.<TMPL_VAR name="version">.books' class="books hidden">
-				<TMPL_LOOP NAME="books">
-					<div id='<TMPL_VAR name="product">.<TMPL_VAR name="version">.<TMPL_VAR name="book">' class="book collapsed" onclick="toggle(event, '<TMPL_VAR name="product">.<TMPL_VAR name="version">.<TMPL_VAR name="book">.types');">
-						<a class="type" href="<TMPL_VAR name="product">/<TMPL_VAR name="version">/html/<TMPL_VAR name="book">/index.html" onclick="window.top.location='./<TMPL_VAR name="product">/<TMPL_VAR name="version">/html/<TMPL_VAR name="book">/index.html'"><span class="book"><TMPL_VAR name="book_clean"></span></a> 
-						<div id='<TMPL_VAR name="product">.<TMPL_VAR name="version">.<TMPL_VAR name="book">.types' class="types hidden" onclick="work=0;">
-						<TMPL_LOOP NAME="types">
-							<a class="type" href="<TMPL_VAR name="prep"><TMPL_VAR name="product">/<TMPL_VAR name="version">/<TMPL_VAR name="type">/<TMPL_VAR name="book">/<TMPL_VAR name="ext">" <TMPL_IF NAME="onclick">onclick="window.top.location='./<TMPL_VAR name="product">/<TMPL_VAR name="version">/<TMPL_VAR name="type">/<TMPL_VAR name="book">/<TMPL_VAR name="ext">';return false;"</TMPL_IF>><TMPL_VAR name="type"></a>
-			        		</TMPL_LOOP>
+	<div class="hidden" id="nocookie">[% nocookie %]</div>
+	[% FOREACH products %]
+	<div class="product collapsed" onclick="toggle(event, '[% product %]');work=1;">
+		<span class="product">[% product_clean %]</span>
+		<div id='[% product %]' class="versions hidden">
+		[% FOREACH versions %]
+			<div id='[% product %].[% version %]' class="version collapsed" onclick="toggle(event, '[% product %].[% version %].books');">
+				<span class="version">[% version %]</span>
+				<div id='[% product %].[% version %].books' class="books hidden">
+				[% FOREACH books %]
+					<div id='[% product %].[% version %].[% book %]' class="book collapsed" onclick="toggle(event, '[% product %].[% version %].[% book %].types');">
+						<a class="type" href="[% product %]/[% version %]/html/[% book %]/index.html" onclick="window.top.location='./[% product %]/[% version %]/html/[% book %]/index.html'"><span class="book">[% book_clean %]</span></a> 
+						<div id='[% product %].[% version %].[% book %].types' class="types hidden" onclick="work=0;">
+						[% FOREACH types %]
+							<a class="type" href="[% prep %][% product %]/[% version %]/[% type %]/[% book %]/[% ext %]" [% IF onclick %]onclick="window.top.location='./[% product %]/[% version %]/[% type %]/[% book %]/[% ext %]';return false;"[% END %]>[% type %]</a>
+			        		[% END %]
 						</div>
 					</div>
-	        		</TMPL_LOOP>
+	        		[% END %]
 				</div>
 			</div>					
-       		</TMPL_LOOP>
+       		[% END %]
 		</div>					
 	</div>					
-       	</TMPL_LOOP>
-	<div class="nocookie" id="nojs">
-		<p>The Navigation Menu above requires JavaScript to function.</p>
-		<p>Enable JavaScript to allow the Navigation Menu to function.</p>
-		<p>Disable CSS to view the Navigation options without JavaScript enabled</p>
-	</div>
+       	[% END %]
+	<div class="nocookie" id="nojs">[% nojs %]</div>
 	<div class="bottom_links">
-		<a href="../toc.html" onclick="window.top.location='../toc.html'" >Site Map</a>
-		<a href="../Site_Statistics.html" onclick="window.top.location='../Site_Statistics.html'" >Site Statistics</a>
-		<a href="./Site_Tech.html" onclick="window.top.location='./Site_Tech.html'" >Site Tech</a>
+		<a href="../toc.html" onclick="window.top.location='../toc.html'" >[% Site_Map %]</a>
+		<a href="../Site_Statistics.html" onclick="window.top.location='../Site_Statistics.html'" >[% Site_Statistics %]</a>
+		<a href="./Site_Tech.html" onclick="window.top.location='./Site_Tech.html'" >[% Site_Tech %]</a>
 	</div>
 </div>					
 </body>
