--- a/publican/templates/static_toc.tmpl
+++ b/publican/templates/static_toc.tmpl
@@ -4,45 +4,45 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link rel="stylesheet" href="interactive.css" type="text/css" />
-	<title>Site Map</title>
+	<title>[% Site_Map %]</title>
 </head>
 <body class="tocnav">
 <div class="static_tocnavwrap">
-<h1 class="producttitle">Site Map</h1>
+<h1 class="producttitle">[% Site_Map %]</h1>
 	<ul>
-	<TMPL_LOOP NAME="static_langs_toc">
-		<li><a href="#<TMPL_VAR name="toc_name">"><TMPL_VAR name="toc_name"></a></li>
-	</TMPL_LOOP>
+	[% FOREACH static_langs_toc %]
+		<li><a href="#[% toc_name %]">[% toc_name %]</a></li>
+	[% END %]
 	</ul>
-	<TMPL_LOOP NAME="static_langs">
-	<div class="perlang" id="<TMPL_VAR name="name">">
-		<h2><TMPL_VAR name="name"> (<TMPL_VAR name="langloc">)</h2>
-		<TMPL_LOOP NAME="products">
+	[% FOREACH static_langs %]
+	<div class="perlang" id="[% name %]">
+		<h2>[% name %] ([% langloc %])</h2>
+		[% FOREACH products %]
 		<div class="product">
-			<span id="<TMPL_VAR name="product">" class="product"><TMPL_VAR name="product_clean"></span>
+			<span id="[% product %]" class="product">[% product_clean %]</span>
 			<div class="versions">
-			<TMPL_LOOP NAME="versions">
+			[% FOREACH versions %]
 				<div class="version">
-					<span class="version"><TMPL_VAR name="version"></span>
+					<span class="version">[% version %]</span>
 					<div class="books">
-					<TMPL_LOOP NAME="books">
+					[% FOREACH books %]
 						<div class="book">
-							<span id="<TMPL_VAR name="book">" class="book"><TMPL_VAR name="book_clean"></span> 
+							<span id="[% book %]" class="book">[% book_clean %]</span> 
 							<div class="types">
-							<TMPL_LOOP NAME="types">
-								<a class="type" href="<TMPL_VAR name="prep"><TMPL_VAR name="langloc">/<TMPL_VAR name="product">/<TMPL_VAR name="version">/<TMPL_VAR name="type">/<TMPL_VAR name="book">/<TMPL_VAR name="ext">"><TMPL_VAR name="type"></a>
-			        			</TMPL_LOOP>
+							[% FOREACH types %]
+								<a class="type" href="[% prep %][% langloc %]/[% product %]/[% version %]/[% type %]/[% book %]/[% ext %]">[% type %]</a>
+			        			[% END %]
 							</div>
 						</div>
-	        			</TMPL_LOOP>
+	        			[% END %]
 					</div>
 				</div>					
-			</TMPL_LOOP>
+			[% END %]
 			</div>					
 		</div>					
-       		</TMPL_LOOP>
+       		[% END %]
 	</div>
-	</TMPL_LOOP>
+	[% END %]
 </div>					
 </body>
 </html>
