--- a/publican/web/interactive.css
+++ b/publican/web/interactive.css
@@ -1,5 +1,3 @@
-@import url("default.css");
-
 .hidden {display:none;/*make submenu collapse*/}
 
 .version.collapsed, .version.expanded {
@@ -450,4 +448,6 @@ h1.producttitle {
 	text-align: center;
 	padding: 1em;
 }
+
+@import url("./Common_Content/css/default.css");
 
