--- a/publican/templates/toc.tmpl
+++ b/publican/templates/toc.tmpl
@@ -30,9 +30,11 @@
 		<span class="product">[% product_clean %]</span>
 		<div id='[% product %]' class="versions hidden">
 		[% FOREACH versions %]
+		    [%- IF version_label != 'UNUSED' -%]
 			<div id='[% product %].[% version %]' class="version collapsed" onclick="toggle(event, '[% product %].[% version %].books');">
-				<span class="version">[% version %]</span>
+				<span class="version">[% version_label %]</span>
 				<div id='[% product %].[% version %].books' class="books hidden">
+		    [%- END -%]
 				[% FOREACH books %]
 					<div id='[% product %].[% version %].[% book %]' class="book collapsed" onclick="toggle(event, '[% product %].[% version %].[% book %].types');">
 						<a class="type" href="[% product %]/[% version %]/html/[% book %]/index.html" onclick="window.top.location='./[% product %]/[% version %]/html/[% book %]/index.html'"><span class="book">[% book_clean %]</span></a> 
@@ -43,8 +45,10 @@
 						</div>
 					</div>
 	        		[% END %]
+		    [%- IF version != 'UNUSED' -%]
 				</div>
 			</div>					
+		    [%- END -%]
        		[% END %]
 		</div>					
 	</div>					
