add web_name_label, web_product_label, web_version_label, to alo web menus to be overridden
git-svn-id: file:///srv/svn/publican/trunk@1238 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/templates/static_toc.tmpl
+++ b/publican/templates/static_toc.tmpl
@@ -22,21 +22,25 @@
 			<span id="[% product %]" class="product">[% product_clean %]</span>
 			<div class="versions">
 			[% FOREACH versions %]
+			    [%- IF version_label != 'UNUSED' -%]
 				<div class="version">
 					<span class="version">[% version %]</span>
+			    [%- END -%]
 					<div class="books">
 					[% FOREACH books %]
 						<div class="book">
 							<span id="[% book %]" class="book">[% book_clean %]</span> 
 							<div class="types">
 							[% FOREACH types %]
-								<a class="type" href="[% prep %][% langloc %]/[% product %]/[% version %]/[% type %]/[% book %]/[% ext %]">[% type %]</a>
+								<a class="type" href="[% prep %][% langloc %]/[% product_path %]/[% version %]/[% type %]/[% book %]/[% ext %]">[% type %]</a>
 			        			[% END %]
 							</div>
 						</div>
 	        			[% END %]
 					</div>
+			    [%- IF version_label != 'UNUSED' -%]
 				</div>					
+			    [%- END -%]
 			[% END %]
 			</div>					
 		</div>					
